@@ -16,6 +16,7 @@ Version 1.7.1+svn:
    * Fixed teleporting to impassable terrain (bug #13795)
    * Fixed an issue where teleporting could leave a unit halo
    * Fixed [set_variable]'s rand and random when operating on 0..0 (return 0)
+   * Allow items to be removed from a listbox
 
 Version 1.7.1:
  * AI:
